fix alignment issue- IE

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6190,10 +6190,10 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 
 .team-setup-squad-block .team-setup-squad-icon-change {
   left: 27.25%;
-  height: 8.5rem;
+  height: 7rem;
   position: relative;
   width: 5%;
-  top: 1.8rem;
+  top: 2.8rem;
 }
 
 .team-setup-squad-block .team-setup-squad-content {
